--- a/style/index.scss
+++ b/style/index.scss
@@ -179,7 +179,7 @@ h3 {
 }
 
 .master-class {
-  height: 100vh;
+  min-height: 100vh;
   background-image: url('../assets/background/main-first-section-bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
