--- a/style/index.scss
+++ b/style/index.scss
@@ -25,7 +25,7 @@ html {
 
 li {
   a {
-    font-size: 2vw;
+    font-size: 1.5vw;
   }
 }
 
@@ -959,7 +959,7 @@ h3 {
       }
 
       &:hover a .cls-1 {
-        fill: black;
+        fill: $red;
       }
 
     }
@@ -977,7 +977,7 @@ h3 {
 
       list-style-type: none;
 
-      .footer__item {
+      li {
         display: grid;
         align-items: center;
         position: relative;
@@ -1005,13 +1005,13 @@ h3 {
         &:hover {
 
           a {
-            color: black;
+            color: $red;
           }
 
           &::before {
             width: 100%;
             height: 1px;
-            background-color: black;
+            background-color: $red;
           }
         }
       }
@@ -1225,6 +1225,11 @@ h3 {
   padding-top: 2vw;
   display: flex;
   justify-content: center;
+
+}
+
+.jcfs  {
+  justify-content: flex-start;
 }
 
 .wrapper {
