--- a/style/index.scss
+++ b/style/index.scss
@@ -832,40 +832,45 @@ h3 {
 
   .unique-project__container {
     padding-top: 3vw;
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(auto);
+    display: flex;
+    // grid-template-columns: repeat(2, auto);
+    // grid-template-rows: repeat(auto);
     gap: 2vw;
 
     .text-container {
-      display: grid;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      min-width: 50%;
       gap: 1vw;
     }
 
     p {
-      font-size: 1.8vw;
+      font-size: 1.5vw;
     }
 
     .img-container {
-      display: grid;
+      display: flex;
       align-items: center;
       height: 100%;
 
       img {
-        width: 100%;
-        height: 100%;
+display: flex;
+        // width: 100%;
+        // height: 100%;
 
-        object-fit: cover;
+        // object-fit: cover;
       }
     }
   }
 
   .unique-project__container-bottom {
     padding-top: 3vw;
+    display: flex;
 
     p {
-      font-size: 1.89vw;
-
+      font-size: 1.5vw;
     }
   }
 
@@ -1225,7 +1230,6 @@ h3 {
   padding-top: 2vw;
   display: flex;
   justify-content: center;
-
 }
 
 .jcfs  {
