--- a/style/index.scss
+++ b/style/index.scss
@@ -185,123 +185,7 @@ h3 {
   background-repeat: no-repeat;
   background-attachment: fixed;
 
-  .header {
 
-    animation: opacityFromZeroToOne 2s forwards;
-
-    .header-container {
-      display: grid;
-      grid-template-columns: repeat(3, auto);
-      gap: 2.5vw;
-
-
-
-
-      .header__logo-container {
-        width: 14vw;
-
-        & a .cls-1 {
-          transition: .5s;
-        }
-
-        &:hover a .cls-1 {
-          fill: $red;
-        }
-
-      }
-    }
-
-    .header__menu {
-      display: grid;
-
-      .header__list {
-        display: grid;
-        align-items: center;
-        justify-content: center;
-        grid-template-columns: repeat(5, auto);
-        gap: 2vw;
-
-        list-style-type: none;
-
-        .header__item {
-          display: grid;
-          align-items: center;
-          position: relative;
-
-          a {
-            // font-size: 1.5em;
-            color: white;
-
-            transition: .5s;
-          }
-
-          &::before {
-            content: '';
-            position: absolute;
-            bottom: -2px;
-            left: 0;
-
-            width: 0px;
-            height: 1px;
-            background-color: white;
-
-            transition: .5s;
-          }
-
-          &:hover {
-
-            a {
-              color: $red;
-            }
-
-            &::before {
-              width: 100%;
-              height: 1px;
-              background-color: $red;
-            }
-          }
-        }
-      }
-    }
-
-    .contacts-container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      align-items: center;
-      justify-content: center;
-      gap: 1.5vw;
-
-      .header__contacts {
-
-        .number {
-          display: flex;
-          justify-content: center;
-
-          a {
-            color: white;
-            font-size: 1.5vw;
-            transition: .5s;
-          }
-
-          &:hover {
-            a {
-              color: $red;
-            }
-          }
-        }
-
-        address {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          color: white;
-          font-style: normal;
-          font-size: 0.75vw;
-        }
-      }
-    }
-  }
 
   .master-class__content {
     padding: 6vw 0vw 12vw;
@@ -528,7 +412,7 @@ h3 {
   }
 }
 
-.buttons-container {
+.button-container {
   padding-top: 3vw;
 
   display: flex;
@@ -856,7 +740,7 @@ h3 {
       height: 100%;
 
       img {
-display: flex;
+        display: flex;
         // width: 100%;
         // height: 100%;
 
@@ -1232,7 +1116,7 @@ display: flex;
   justify-content: center;
 }
 
-.jcfs  {
+.jcfs {
   justify-content: flex-start;
 }
 
@@ -1429,4 +1313,207 @@ display: flex;
   align-items: center;
   text-align: center;
   flex-wrap: wrap;
+}
+
+.teachers {
+  background-image: url('../assets/background/main-first-section-bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+
+  &__list {
+    padding-top: 4vw;
+
+    .teachers__container {
+      padding: 2vw 0vw;
+
+      .teachers__container__content {
+        padding-top: 2vw;
+        display: flex;
+        justify-content: center;
+        // align-items: center;
+        gap: 4vw;
+
+        .teachers__container__text {
+          width: 60%;
+          display: flex;
+          flex-direction: column;
+          gap: 2vw;
+
+          &__name {
+            display: flex;
+          }
+
+          &__specialization {
+            padding-left: 4vw;
+            position: relative;
+            display: grid;
+            // align-items: center;
+            // justify-content: center;
+
+            &:before {
+              position: absolute;
+              top: 0;
+              left: 0;
+              content: '*';
+              color: red;
+              font-size: 4vw;
+              font-family: 'Bicubik';
+            }
+          }
+
+          .teachers__container__text__info {
+            display: grid;
+            gap: 1vw;
+
+            .shutova__achievments {
+  
+              display: grid;
+              gap: 1vw;
+              grid-template-columns: repeat(2, auto);
+              color: white;
+  
+            }
+          }
+        }
+
+        .teachers__container__img-container {
+          align-items: flex-start;
+          display: grid;
+          width: 40%;
+
+          img {
+
+            max-width: 100%;
+            max-height: 100%;
+          }
+        }
+      }
+
+
+    }
+
+  }
+
+
+}
+
+
+.header {
+
+  animation: opacityFromZeroToOne 2s forwards;
+
+  .header-container {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 2.5vw;
+
+
+
+
+    .header__logo-container {
+      width: 14vw;
+
+      & a .cls-1 {
+        transition: .5s;
+      }
+
+      &:hover a .cls-1 {
+        fill: $red;
+      }
+
+    }
+  }
+
+  .header__menu {
+    display: grid;
+
+    .header__list {
+      display: grid;
+      align-items: center;
+      justify-content: center;
+      grid-template-columns: repeat(5, auto);
+      gap: 2vw;
+
+      list-style-type: none;
+
+      .header__item {
+        display: grid;
+        align-items: center;
+        position: relative;
+
+        a {
+          // font-size: 1.5em;
+          color: white;
+
+          transition: .5s;
+        }
+
+        &::before {
+          content: '';
+          position: absolute;
+          bottom: -2px;
+          left: 0;
+
+          width: 0px;
+          height: 1px;
+          background-color: white;
+
+          transition: .5s;
+        }
+
+        &:hover {
+
+          a {
+            color: $red;
+          }
+
+          &::before {
+            width: 100%;
+            height: 1px;
+            background-color: $red;
+          }
+        }
+      }
+    }
+  }
+
+  .contacts-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5vw;
+
+    .header__contacts {
+
+      .number {
+        display: flex;
+        justify-content: center;
+
+        a {
+          color: white;
+          font-size: 1.5vw;
+          transition: .5s;
+        }
+
+        &:hover {
+          a {
+            color: $red;
+          }
+        }
+      }
+
+      address {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        color: white;
+        font-style: normal;
+        font-size: 0.75vw;
+      }
+    }
+  }
 }
