--- a/style/index.css
+++ b/style/index.css
@@ -1181,4 +1181,146 @@ h3 {
   font-size: 2vw;
   font-family: "Bicubik";
   line-height: 2.5vw;
+}
+
+.about-page {
+  background-image: url("../assets/background/main-first-section-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.about-page h1 {
+  padding-top: 4vw;
+}
+.about-page .container__top {
+  display: grid;
+}
+.about-page .container__top .who-we-are__container-top {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2vw;
+}
+.about-page .container__top .who-we-are__container-top__left {
+  padding-top: 2vw;
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+  justify-content: center;
+  grid-template-areas: "a a" "b c";
+}
+.about-page .container__top .who-we-are__container-top__left .star {
+  padding-left: 6vw;
+  position: relative;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+.about-page .container__top .who-we-are__container-top__left .star::first-line {
+  font-weight: 700;
+}
+.about-page .container__top .who-we-are__container-top__left .star::before {
+  content: "*";
+  position: absolute;
+  top: 30%;
+  left: 0vw;
+  font-size: 5vw;
+  color: #A30000;
+  font-family: "Bicubik";
+}
+.about-page .container__top .who-we-are__container-top__left .facts-container {
+  padding-top: 2vw;
+}
+.about-page .container__top .who-we-are__container-top__left .facts-container .facts {
+  padding-top: 2vw;
+}
+.about-page .container__top .who-we-are__container-top__left .facts-container .facts p {
+  padding-left: 2vw;
+}
+.about-page .container__top .who-we-are__container-top__right {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.about-page .container__top .who-we-are__container-top__right .sandler-img-text {
+  position: absolute;
+  bottom: 1vw;
+  left: -10vw;
+}
+.about-page .container__top .who-we-are__container-top__right::before {
+  background-image: url("../assets/sandler-text.png");
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.about-page .container__bottom {
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr;
+  align-items: center;
+}
+.about-page .container__bottom__img-container {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  display: flex;
+  align-items: flex-end;
+}
+.about-page .container__bottom__img-container img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.about-page .container__bottom__text-container h2 {
+  position: relative;
+}
+.about-page .container__bottom__text-container h2 .inner-span {
+  font-family: "Bicubik";
+  color: #A30000;
+}
+.about-page .container__bottom__text-container h2::before {
+  content: "«";
+  position: absolute;
+  top: -6vw;
+  left: 0vw;
+  font-size: 5vw;
+  color: #A30000;
+  font-family: "Bicubik";
+}
+.about-page .container__bottom__text-container h2:after {
+  content: "– Игорь Борисович Сандлер";
+  font-family: "Montserrat";
+  font-size: 1.25vw;
+  font-weight: 300;
+  position: absolute;
+  bottom: -2vw;
+  right: -1vw;
+}
+
+.red {
+  color: #A30000;
+}
+
+.our-projects__container {
+  display: grid;
+  grid-template-areas: "a b" "c d";
+  grid-template-columns: repeat(2, 0.5fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 2vw;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #A30000;
+}
+.our-projects__container .our-projects__project {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #A30000;
+}
+.our-projects__container .our-projects__project .img-container {
+  max-width: 100%;
+}
+.our-projects__container .our-projects__project p {
+  font-size: 1vw;
+  text-align: center;
 }/*# sourceMappingURL=index.css.map */
