--- a/style/index.scss
+++ b/style/index.scss
@@ -1368,12 +1368,12 @@ h3 {
             gap: 1vw;
 
             .shutova__achievments {
-  
+
               display: grid;
               gap: 1vw;
               grid-template-columns: repeat(2, auto);
               color: white;
-  
+
             }
           }
         }
@@ -1573,6 +1573,191 @@ h3 {
         font-size: 2vw;
         font-family: 'Bicubik';
         line-height: 2.5vw;
+      }
+    }
+  }
+}
+
+.about-page {
+  background-image: url('../assets/background/main-first-section-bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+  h1 {
+    padding-top: 4vw;
+
+  }
+  .container__top {
+
+    display: grid;
+
+    .who-we-are__container-top {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 2vw;
+
+      &__left {
+        padding-top: 2vw;
+        display: grid;
+        grid-template-columns: auto auto;
+        align-items: center;
+        justify-content: center;
+
+        grid-template-areas:
+          "a a"
+          "b c";
+
+
+        .star {
+          padding-left: 6vw;
+          position: relative;
+
+          grid-column-start: 1;
+          grid-column-end: 3;
+
+          &::first-line {
+            font-weight: 700;
+          }
+
+          &::before {
+            content: '*';
+            position: absolute;
+            top: 30%;
+            left: 0vw;
+            font-size: 5vw;
+            color: $red;
+            font-family: 'Bicubik';
+          }
+        }
+
+        .facts-container {
+          padding-top: 2vw;
+
+          .facts {
+            padding-top: 2vw;
+
+            p {
+              padding-left: 2vw;
+            }
+          }
+        }
+      }
+
+      &__right {
+        display: grid;
+        width: 100%;
+        height: 100%;
+        position: relative;
+
+        .sandler-img-text {
+          position: absolute;
+          bottom: 1vw;
+          left: -10vw;
+        }
+
+        &::before {
+          background-image: url('../assets/sandler-text.png');
+          position: absolute;
+          top: 0;
+          left: 0;
+        }
+      }
+    }
+  }
+
+  .container__bottom {
+    display: grid;
+
+    grid-template-columns: 0.5fr 0.5fr;
+    align-items: center;
+
+    &__img-container {
+      grid-column-start: 1;
+      grid-column-end: 2;
+      display: flex;
+      align-items: flex-end;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    &__text-container {
+
+      h2 {
+        position: relative;
+
+        .inner-span {
+          font-family: 'Bicubik';
+          color: $red;
+        }
+
+
+        &::before {
+          content: '«';
+          position: absolute;
+          top: -6vw;
+          left: 0vw;
+          font-size: 5vw;
+          color: $red;
+          font-family: 'Bicubik';
+        }
+
+        &:after {
+          content: '– Игорь Борисович Сандлер';
+          font-family: 'Montserrat';
+          font-size: 1.25vw;
+          font-weight: 300;
+          position: absolute;
+          bottom: -2vw;
+          right: -1vw;
+        }
+      }
+    }
+  }
+}
+
+.red {
+  color: $red;
+}
+
+.our-projects {
+  
+  &__container {
+    display: grid;
+    grid-template-areas: 
+      "a b"
+      "c d";
+    grid-template-columns: repeat(2, 0.5fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 2vw;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid $red;
+
+    .our-projects__project {
+      display: grid;
+      grid-template-rows: repeat(2, 1fr);
+      // grid-template-columns: repeat(2, 0.5fr);
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border: 1px solid $red;
+      
+      .img-container {
+        max-width: 100%;
+        // display: flex;
+      }
+      p {
+        // display: grid;
+        // justify-content: center;
+  
+        font-size: 1vw;
+        // width: 50%;
+        text-align: center;
       }
     }
   }
