--- a/style/media.css
+++ b/style/media.css
@@ -1,3 +1,35 @@
-@media screen and (max-width: 1199px;) {
-  
-}
+@media screen and (max-width: 1199px) {
+  :root {
+    font-size: calc(24px + 1.25vw);
+  }
+  .master-class {
+    height: 100vh;
+    width: 100vw;
+    background-color: green;
+    background-image: initial;
+  }
+  .master-class .wrapper .header .header-container .header__logo-container {
+    width: 168px;
+  }
+  .master-class .wrapper .header .header-container .header__menu {
+    display: none;
+  }
+  .master-class .wrapper .header .header-container .contacts-container {
+    display: none;
+  }
+  .master-class .wrapper .master-class__content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .master-class .wrapper .master-class__content .master-class__content__text-container {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}/*# sourceMappingURL=media.css.map */
